# ai-math-tutor

./: .dockerignore  .env.example  .firebaserc  .gitignore  AGENTS.md  CLAUDE.md  Procfile  README.md  apphosting.yaml  findings.md  firebase.json  package.json  pnpm-lock.yaml  progress.md  pyproject.toml  task_plan.md
.github/workflows/: hosted-rollout.yml
backend/: Dockerfile  __init__.py
backend/ai/: __init__.py  call_logging.py  langsmith.py
backend/benchmarks/: canned_prompts.json  live_provider_benchmark.py  run_latency_benchmark.py  run_live_benchmark.py  runtime_fast_benchmark.py
backend/livekit/: __init__.py  avatar_agent.py  (+1 more)
docs/: ARCHITECTURE.md  EVAL.md  PRD.md  STACK.md  TASKS.md  TTS.md  avatar-costs-and-licensing.md  cost-performance.md  demo-operator-notes.md  demo-script.md  eval-summary.md  findings.md  livekit-managed-avatars.md  post.md  progress.md  radiant-lessons-hub-page-review.md  requirements-trace.md  requirements.md  reviewer-checklist.md  script-demo.md  social-2026-03-12.md  staging-rollout.md  submission-checklist.md  testing-plan.md
eval/: __init__.py  langchain_golden_eval.py  multi_turn_report.py  rubric.md  socratic_checks.py  task_plan.md  test_turns.json
frontend/: .env.example  .firebaseignore  apphosting.yaml  firebase.json  next.config.test.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.typecheck.json  vitest.config.ts  vitest.setup.ts
scripts/: dev.sh  pull_doppler_env.py  rollout_hosted.py  smoke_hosted.py
tests/: conftest.py  test_workspace_layout.py
(+335 files in other folders)
